// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div
    class="jc-dropdown  jc-dropdown-placement-bottomLeft  jc-dropdown-hidden"
  >
    <div>
      <div
        class="custom-filter-dropdown"
      >
        custom filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="jc-table-wrapper"
>
  <div
    class="jc-spin-nested-loading"
  >
    <div
      class="jc-spin-container"
    >
      <div
        class="jc-table jc-table-large jc-table-scroll-position-left"
      >
        <div
          class="jc-table-content"
        >
          <div
            class="jc-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
              </colgroup>
              <thead
                class="jc-table-thead"
              >
                <tr>
                  <th
                    class="jc-table-column-has-filters"
                  >
                    <span>
                      Name
                      <i
                        class="jcicon jcicon-filter  jc-dropdown-trigger"
                        title="Filter menu"
                      />
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="jc-table-tbody"
              >
                <tr
                  class="jc-table-row  jc-table-row-level-0"
                >
                  <td
                    class="jc-table-column-has-filters"
                  >
                    <span
                      class="jc-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jack
                  </td>
                </tr>
                <tr
                  class="jc-table-row  jc-table-row-level-0"
                >
                  <td
                    class="jc-table-column-has-filters"
                  >
                    <span
                      class="jc-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Lucy
                  </td>
                </tr>
                <tr
                  class="jc-table-row  jc-table-row-level-0"
                >
                  <td
                    class="jc-table-column-has-filters"
                  >
                    <span
                      class="jc-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Tom
                  </td>
                </tr>
                <tr
                  class="jc-table-row  jc-table-row-level-0"
                >
                  <td
                    class="jc-table-column-has-filters"
                  >
                    <span
                      class="jc-table-row-indent indent-level-0"
                      style="padding-left:0px"
                    />
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div
    class="jc-dropdown  jc-dropdown-placement-bottomLeft  jc-dropdown-hidden"
  >
    <div
      class="jc-table-filter-dropdown"
    >
      <ul
        aria-activedescendant=""
        class="jc-dropdown-menu  jc-dropdown-menu-root jc-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          aria-selected="false"
          class="jc-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox"
            >
              <input
                class="jc-checkbox-input"
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          aria-selected="false"
          class="jc-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="jc-checkbox-wrapper"
          >
            <span
              class="jc-checkbox"
            >
              <input
                class="jc-checkbox-input"
                type="checkbox"
              />
              <span
                class="jc-checkbox-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="jc-dropdown-menu-submenu jc-dropdown-menu-submenu-vertical"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            aria-owns="title$Menu"
            class="jc-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="jc-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="jc-table-filter-dropdown-btns"
      >
        <a
          class="jc-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="jc-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div
    class="jc-dropdown  jc-dropdown-placement-bottomLeft  jc-dropdown-hidden"
  >
    <div
      class="jc-table-filter-dropdown"
    >
      <ul
        aria-activedescendant=""
        class="jc-dropdown-menu  jc-dropdown-menu-root jc-dropdown-menu-vertical"
        role="menu"
        tabindex="0"
      >
        <li
          aria-selected="false"
          class="jc-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="jc-radio-wrapper"
          >
            <span
              class="jc-radio"
            >
              <input
                class="jc-radio-input"
                type="radio"
              />
              <span
                class="jc-radio-inner"
              />
            </span>
          </label>
          <span>
            Boy
          </span>
        </li>
        <li
          aria-selected="false"
          class="jc-dropdown-menu-item"
          role="menuitem"
        >
          <label
            class="jc-radio-wrapper"
          >
            <span
              class="jc-radio"
            >
              <input
                class="jc-radio-input"
                type="radio"
              />
              <span
                class="jc-radio-inner"
              />
            </span>
          </label>
          <span>
            Girl
          </span>
        </li>
        <li
          class="jc-dropdown-menu-submenu jc-dropdown-menu-submenu-vertical"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            aria-owns="title$Menu"
            class="jc-dropdown-menu-submenu-title"
            title="Title"
          >
            Title
            <i
              class="jc-dropdown-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
      <div
        class="jc-table-filter-dropdown-btns"
      >
        <a
          class="jc-table-filter-dropdown-link confirm"
        >
          OK
        </a>
        <a
          class="jc-table-filter-dropdown-link clear"
        >
          Reset
        </a>
      </div>
    </div>
  </div>
</div>
`;
